improve the stability of the downloading

--- a/aria2.conf
+++ b/aria2.conf
@@ -7,9 +7,11 @@ max-concurrent-downloads=6
 max-connection-per-server=10
 min-split-size=10M
 split=10
-continue=true
+continue=false
+force-save=false
 max-overall-download-limit=0
 max-overall-upload-limit=1K
+disk-cache=0
 
 enable-rpc=true
 rpc-listen-all=true
